# PX4_NMPC_NEW_BUNDLE

./: CMakeLists.txt  README.md  mc_att_control.hpp  mc_att_control_main.cpp
AttitudeControl/: AttitudeControl.cpp  CMakeLists.txt
cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver  testsolver.c  util.c
mpc_solver/: acado_auxiliary_functions.h  acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_solver.c
